# StreamingAgenticInference

./: .gitignore  00_START_HERE.md  CLAUDE.md  PHASE5_SUMMARY.md  README_TDD.md  STATUS.md  TDD_IMPLEMENTATION_STRATEGY.md  TDD_INDEX.md  TDD_QUICK_START.md  TEST_STRUCTURE.md  demo_calc.py  pyproject.toml  requirements-eval.txt  requirements.txt  step5_alfworld_spec.md  streamagent_eval.ipynb  streamagent_spec.md
configs/: alfworld_eval.yaml  alfworld_system_prompt.txt  gridworld_system_prompt.txt
docs/: e2e-demo-report.md
streamagent/: __init__.py
streamagent/configs/: __init__.py  alfworld_eval.yaml
streamagent/engine/: __init__.py  injector.py  interfaces.py  kv_stream.py  router.py  sink_cache.py
streamagent/engine/backends/: __init__.py  factory.py  hf_backend.py  llama_backend.py  mlx_backend.py
streamagent/env/: __init__.py  alfworld_env.py  calc_env.py  gridworld.py  renderer.py  scenarios.py
streamagent/eval/: alfworld_judge.py  harness.py  metrics.py
streamagent/scripts/: run_gridworld_eval.py
tests/: test_alfworld_env.py  test_alfworld_judge.py  test_backends.py  test_calc_env.py  test_eval_harness.py  test_eval_metrics.py  test_gridworld.py  test_injector.py  test_integration.py  test_interfaces.py  test_kv_stream.py  test_router.py  test_sampling.py  test_sink_cache.py
